add Filter.java tests